--- a/Report/01-intro.Rmd
+++ b/Report/01-intro.Rmd
@@ -20,7 +20,7 @@ Il grado del tumore può assumere 3 stati a seconda di quanto l’aspetto delle 
 Le cellule tumorali mammarie possono inoltre presentare un recettore per l’ormone dell’estrogeno (ER = 1) oppure non presentarlo (ER=0); ciò è importante in fase prognostica e terapeutica in quanto la dimensione del tumore cresce grazie all’estrogeno, e fornire farmaci che inibiscono tale recettore può bloccare la crescita del tumore.
 \newline
 I dati sono chiaramente orientati ad uno studio sull’insorgenza precoce del tumore al seno, in quanto ben l’80% delle diagnosi globali viene fatta ad un’ età superiore ai 50 anni, il 15% ad un’età compresa tra i 40 ed i 50, e solo il 5% per età inferiori ai 40.
-Infine, è presente un pool di 70 geni potenzialmente prognostici, la cui è espressione genica è selezionata valutata tramite test del DNA a microarray. L’importanza del fattore genetico nell’incidenza del tumore mammario è già documentata con una certa significatività in circa il 5% dei casi: ad esempio, i portatori dei geni BRCA1 e BRCA2 (non presenti nel nostro dataset) hanno una probabilità di contrarre il tumore dal 60% al 80%.
+Infine, è presente un pool di 70 geni potenzialmente prognostici, la cui è espressione genica è valutata tramite test del DNA a microarray. L’importanza del fattore genetico nell’incidenza del tumore mammario è già documentata con una certa significatività in circa il 5% dei casi: ad esempio, i portatori dei geni BRCA1 e BRCA2 (non presenti nel nostro dataset) hanno una probabilità di contrarre il tumore dal 60% al 80%.
 
 ![La figura mostra i “geni a bassa penetranza per il carcinoma mammario”. Ad alterazioni di questi geni sono associati un rischio di carcinoma mammario di due-quattro volte superiore rispetto a quello osservato nella popolazione generale.](_images/image3.png)
 
